# realtime_core

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
doc/realtime_ndt_scan_matcher/: reader-map.html  searcher-09f2665d.js
doc/realtime_ndt_scan_matcher/arch/: align.html  concurrency.html  derivatives.html  engine-state.html  tpe.html
doc/realtime_ndt_scan_matcher/concepts/: scores.html
doc/realtime_ndt_scan_matcher/port/: differential.html
doc/realtime_ndt_scan_matcher/start/: features.html  using-the-crate.html
docs/realtime_ndt_scan_matcher/: 404.html  index.html  print.html  searchindex-4fb7122e.js  toc-427fc75c.js  toc.html
docs/realtime_ndt_scan_matcher/appendix/: modules.html
docs/realtime_ndt_scan_matcher/arch/: covariance.html  engine.html  map-update.html  portability.html  scratch.html  voxel-grid.html
docs/realtime_ndt_scan_matcher/concepts/: ndt-primer.html
realtime_ndt_scan_matcher/: Cargo.toml  README.md  coverage.sh  eval_paper_fixtures.sh  gen_docs.sh  gen_fixtures.sh  paper_fixtures.sha256
realtime_ndt_scan_matcher/examples/: threads_ndt.rs  tokio_ndt.rs  wcet_fixtures.rs  wcet_frame.rs  wcet_paper_search_fixtures.rs  wcet_search.rs  wcet_search_legal.rs
realtime_ndt_scan_matcher/src/: capture.rs  convergence.rs  cov_estimate.rs  covariance.rs  derivatives.rs  engine.rs  fixture.rs  helper.rs  host.rs  kdtree.rs  lib.rs  ndt.rs  pose_buffer.rs  scan_matcher.rs  tpe.rs  transform.rs  voxel_grid.rs  wcet.rs
realtime_ndt_scan_matcher/tests/: concurrency.rs  wcet_bounds.rs  zero_alloc.rs
(+24 files in other folders)
